objects/SalesOrder__x.object
<CustomObject>
    <description>SalesOrder</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>SalesOrder</externalName>
    <fields>
        <fullName>businessPartnerId__c</fullName>
        <description>businessPartnerId</description>
        <externalDeveloperName>businessPartnerId</externalDeveloperName>
        <label>businessPartnerId</label>
        <length>128</length>
        <referenceTargetField>Account.Customer_Account__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SalesOrder</relationshipLabel>
        <relationshipName>SalesOrder</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <description>currency</description>
        <externalDeveloperName>currency</externalDeveloperName>
        <label>currency</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customerName__c</fullName>
        <description>customerName</description>
        <externalDeveloperName>customerName</externalDeveloperName>
        <label>customerName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netSum__c</fullName>
        <description>netSum</description>
        <externalDeveloperName>netSum</externalDeveloperName>
        <label>netSum</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>note__c</fullName>
        <description>note</description>
        <externalDeveloperName>note</externalDeveloperName>
        <label>note</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesOrderId__c</fullName>
        <description>salesOrderId</description>
        <externalDeveloperName>salesOrderId</externalDeveloperName>
        <label>salesOrderId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tax__c</fullName>
        <description>tax</description>
        <externalDeveloperName>tax</externalDeveloperName>
        <label>tax</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalSum__c</fullName>
        <description>totalSum</description>
        <externalDeveloperName>totalSum</externalDeveloperName>
        <label>totalSum</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <label>SalesOrder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>SalesOrder</pluralLabel>
</CustomObject>